--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,3 +19,5 @@ $button-group-separation: 0.21em;
 $mobile-breakpoint: 600px;
 $tablet-breakpoint: 900px;
 $desktop-breakpoint: 1200px;
+
+$focus-box-shadow: inset 0 0 0 2px var(--color-focus);
